Implemented AJAX request to server to put the message 'Hi' in the text area when the button is clicked.

--- a/static/html/index.html
+++ b/static/html/index.html
@@ -9,8 +9,9 @@
             <h1>Welcome to Fake Blog</h1>
         </div>
         <div>
-            <textarea></textarea>
-            <button>Post</button>
+            <textarea id="textbox"></textarea>
+            <button onclick="onClick()">Post</button>
         </div>
+        <script src="../script/ajaxTest.js"></script>
     </body>
 </html>
