--- a/static/html/index.html
+++ b/static/html/index.html
@@ -4,14 +4,18 @@
         <title>Fake Blog</title>
         <link rel="stylesheet" type="text/css" href="../css/index.css">
     </head>
-    <body>
+    <body onload="getPosts()">
         <div>
             <h1>Welcome to Fake Blog</h1>
         </div>
         <div>
-            <textarea id="textbox"></textarea>
-            <button onclick="onClick()">Post</button>
+            <textarea id="postTitle" rows="1" cols="10"></textarea>
+            <textarea id="postBody" rows="5" cols="10"></textarea>
+            <button onclick="postPost()">Post</button>
         </div>
+        <div id="blog-posts"></div>
+        <script src="../script/getPosts.js"></script>
+        <script src="../script/postPost.js"></script>
         <script src="../script/ajaxTest.js"></script>
     </body>
 </html>
